// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/progressBar how does it behave when there is no value 1`] = `
Object {
  "backgroundColor": "#0000FF",
  "width": "0%",
}
`;

exports[`components/progressBar how does it behave when there is no value 2`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={0}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#0000FF",
          "width": "0%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders a progress bar with strips 1`] = `ReactWrapper {}`;

exports[`components/progressBar renders a progress bar with strips 2`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={true}
  value={0}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="progress-bar progress-bar-striped
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#0000FF",
          "width": "0%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders an animated progress bar 1`] = `ReactWrapper {}`;

exports[`components/progressBar renders an animated progress bar 2`] = `
<ProgressBar
  animate={false}
  anime={true}
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={0}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#0000FF",
          "width": "0%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for different value 1`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#5269EB"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={70}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={70}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#00FF00",
          "width": "70%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for different value 2`] = `
Object {
  "backgroundColor": "#00FF00",
  "width": "70%",
}
`;

exports[`components/progressBar renders correctly for the default props 1`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={50}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={50}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#0000FF",
          "width": "50%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for the default props 2`] = `
Object {
  "backgroundColor": "#0000FF",
  "width": "50%",
}
`;

exports[`components/progressBar renders correctly for the default props 3`] = `
Object {
  "aria-valuemax": 100,
  "aria-valuemin": 0,
  "aria-valuenow": 50,
  "children": null,
  "className": "progress-bar 
        ",
  "role": "progressbar",
  "style": Object {
    "backgroundColor": "#0000FF",
    "width": "50%",
  },
}
`;

exports[`components/progressBar renders correctly for this set of props 1`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#0000FF"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={10}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FF0000",
          "width": "10%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly for this set of props 2`] = `
Object {
  "backgroundColor": "#FF0000",
  "width": "10%",
}
`;

exports[`components/progressBar renders correctly if both lineColor and threshold are given 1`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#5269EB"
  lineColorThresholds={
    Object {
      "#00FF00": 70,
      "#FF0000": 0,
      "#FFFF00": 30,
    }
  }
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={40}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={40}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FFFF00",
          "width": "40%",
        }
      }
    />
  </div>
</ProgressBar>
`;

exports[`components/progressBar renders correctly if both lineColor and threshold are given 2`] = `
Object {
  "backgroundColor": "#FFFF00",
  "width": "40%",
}
`;

exports[`components/progressBar uses lineColor if thresholds are not given 1`] = `
Object {
  "backgroundColor": "#FFFF00",
  "width": "70%",
}
`;

exports[`components/progressBar uses lineColor if thresholds are not given 2`] = `
<ProgressBar
  animate={false}
  decimalPoints={0}
  height="10px"
  lineColor="#FFFF00"
  max={100}
  min={0}
  progressAnimationClass="progress-bar-striped progress-bar-animated"
  progressStrippedClass="progress-bar-striped"
  showLabel={false}
  stripped={false}
  value={70}
>
  <div
    className="progress"
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={70}
      className="progress-bar 
        "
      role="progressbar"
      style={
        Object {
          "backgroundColor": "#FFFF00",
          "width": "70%",
        }
      }
    />
  </div>
</ProgressBar>
`;
